# PolySchemeFramework

./: Quick_start.ipynb  README.md
DataTable/: Data.H
Include/: Data.H  FirstOrderUpwind.C  FirstOrderUpwind.H  Lax-Wendroff-checkpoint.H  Lax-Wendroff.C  Lax-Wendroff.H  Lax.C  Lax.H  Solvers.C  Solvers.H  SolversWrapper-checkpoint.H  SolversWrapper.C  SolversWrapper.H
Lax/: Lax.C
Scripts/: Allclean.sh  Allink.sh  Allmake.sh  CMakeLists.txt  README_en.md  solver_binding.cpp
Solvers/: Solvers.C
Wrapper/.ipynb_checkpoints/: SolversWrapper-checkpoint.H
